Fne 942 mahendra sprint11 (#401)
* FNE_926 changes

FNE_926 changes

* FNE_926 changes

FNE_926 changes

* FNE_914 changes

FNE_914 changes

* FNE_914 changes

FNE_914 changes

* FNE_914 changes

FNE_914 changes

* FNE_942 changes

FNE_942 changes

* FNE_18 changes

FNE_18 changes

* FNE_914 changes

FNE_914 changes

--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.html
@@ -298,7 +298,7 @@
                   </label>
                 </div>
               </div>
-              <div class="col-md">
+             <!-- <div class="col-md">
                 <div class="checkbox">
                   <label>
                     <input [(ngModel)]="getSortableColumn('aggregate').checked"
@@ -309,7 +309,7 @@
                     </span>
                   </label>
                 </div>
-              </div>
+              </div>-->
               <div class="col-md">
                 <div class="checkbox">
                   <label>
