--- a/front-end/src/app/dashboard/dashboard.component.html
+++ b/front-end/src/app/dashboard/dashboard.component.html
@@ -4,19 +4,19 @@
       <div class="row">
         <div class="col">
           <h3 class="pb-3 pt-3 border-bottom">Upcoming Reports</h3>
-          <p><span><strong>12/29/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
+          <p><span><strong>12/29/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days</p>
 
-          <p><span><strong>12/31/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
+          <p><span><strong>12/31/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days</p>
 
-          <p><span><strong>12/31/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
+          <p><span><strong>12/31/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days</p>
         </div>
         <div class="col">
           <h3 class="pb-3 pt-3 border-bottom">Upcoming Reports</h3>
-          <p><span><strong>11/28/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
+          <p><span><strong>11/28/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days</p>
 
-          <p><span><strong>11/29/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
+          <p><span><strong>11/29/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days</p>
 
-          <p><span><strong>11/30/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days.</p>
+          <p><span><strong>11/30/2019</strong></span> - PAC & Party Report of Receipts & Disbursements (F3X) due in <span>XX</span> days</p>
         </div>
       </div>
       <div class="row">
