--- a/front-end/src/app/app-layout/app-layout.component.html
+++ b/front-end/src/app/app-layout/app-layout.component.html
@@ -52,7 +52,7 @@
               {{formStartDate | date: 'MM/dd/yyyy'}} - {{formEndDate | date: 'MM/dd/yyyy'}}
             </div>
             <div>
-              Due in {{formDueDate}} days.
+              Due in {{formDueDate}} days
               <a
                 class="btn btn-link btn-edit"
                 (click)="editFrom()"
