Change color & add padding to cancel btn

--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -85,11 +85,11 @@
             </ul>
         </div>
       </section>
-      <footer>
+      <footer class="container-fluid">
         <div class="grid-row">
           <div class="grid-row__col grid-row__col--11 forms__btn-container">
             <button
-              class="btn btn-default btn-left"
+              class="btn btn-previous btn-left"
               type="button"
               (click)="cancel()"
             >
