FNE 931 transaction type shading alignment

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.scss
@@ -108,12 +108,13 @@
                 }
                 .collapse {
                   .card-body {
+                    padding: 0;
                     .child-options {
                       list-style-type: none;
                       .child-options__item {
                         display: block;
-                        height: 50px;
                         width: 100%;
+                        padding: 1em;
                         &:nth-child(even) {
                           background-color: $seaShell !important;
                         }
