Add space between the title and the field

--- a/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
+++ b/front-end/src/app/forms/form-3x/individual-receipt/individual-receipt.component.scss
@@ -58,6 +58,7 @@
           }
           label {
             display: block;
+            padding-bottom: .75em;
           }
           input[type='text'],
           input[type='date'],
