--- a/front-end/src/app/forms/form-3x/f3x/f3x.component.html
+++ b/front-end/src/app/forms/form-3x/f3x/f3x.component.html
@@ -12,7 +12,7 @@
     </div>
     <div *ngIf="step==='step_2' || step==='step_3'">
       <transaction-sidebar
-        step="step"
+        [step]="step"
         title="Transaction Categories"
         [transactionCategories]="transactionCategories"
         (status)='onNotify($event)'
