--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
@@ -12,11 +12,11 @@
     </div>
     <div class="modal-body">{{message}}</div>
     <div class="modal-footer">
-      <button 
+      <button *ngIf="isShowOK"
         type="button" 
-        class="btn btn-default" 
+        class="btn btn-secondary" 
         (click)="activeModal.close('okay')"
-      >Cancel</button>     
+      >OK</button>     
       <button *ngIf="isShowCancel"
         type="button" 
         (click)="activeModal.close('cancel')"
@@ -25,7 +25,7 @@
       <button *ngIf="isShowReportExist"
       type="button" 
       (click)="activeModal.close('ReportExist')"
-      class="btn btn-primary"
+      class="btn btn-secondary"
     >Show Report</button>     
     </div>
   </div>
