--- a/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
+++ b/front-end/src/app/shared/partials/confirm-modal/confirm-modal.component.html
@@ -25,7 +25,7 @@
       <button *ngIf="isShowReportExist"
       type="button" 
       (click)="activeModal.close('ReportExist')"
-      class="btn btn-secondary"
+      class="btn btn-primary btn-right"
     >Show Report</button>     
     </div>
   </div>
