remove margin around total amount

--- a/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
+++ b/front-end/src/app/forms/transactions/transactions-table/transactions-table.component.scss
@@ -63,9 +63,9 @@
     float: right;
   }
 
-  .transactions__total-amount-container {
-    margin: 1.5em 0;
-  }
+  // .transactions__total-amount-container {
+  //   margin: 1.5em 0;
+  // }
 
 
   /* style ngx-pagination - start */
