--- a/front-end/src/app/reports/reportheader/reportheader.component.html
+++ b/front-end/src/app/reports/reportheader/reportheader.component.html
@@ -33,7 +33,7 @@
                     <i class="fas fa-recycle"></i> Recycle
                     </button>      
 
-                    <div class="input-group pl-0 transactions__trx-search">
+                    <!--<div class="input-group pl-0 transactions__trx-search">
                         <div class="input-group-append" (click)="clearSearch()" 
                             ngbTooltip="Clear Keywords" tooltipClass="form-tooltip">
                           <span class="input-group-text" id="">
@@ -48,9 +48,9 @@
                             <i class="search-icon text-grey" aria-hidden="true"></i>
                           </span>
                         </div>
-                      </div>              
-                   </div> 
-                  </div>
+                     </div>              
+                   </div> -->
+                 </div>
           </div>   
           <div class="grid-row">
             <div class="grid-row__col grid-row__col--12">
