Fixing issue with validation for date from and date to fields

--- a/front-end/src/app/forms/form-3x/report-type/report-type.component.html
+++ b/front-end/src/app/forms/form-3x/report-type/report-type.component.html
@@ -33,7 +33,7 @@
                 You must select a report type for filing.
               </div>
               <div class="text-error text-center"
-                *ngIf="((frmReportType.dirty || frmReportType.touched) && !optionFailed && !fromDateSelected && !toDateSelected)">
+                *ngIf="((frmReportType.dirty || frmReportType.touched) && !optionFailed && (!fromDateSelected || !toDateSelected))">
                 You must select coverage dates.
               </div>
               <ng-template #nextErrors>
