Adding function for when transaction type panels change

--- a/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
+++ b/front-end/src/app/forms/form-3x/transaction-type/transaction-type.component.html
@@ -51,7 +51,10 @@
           </ng-container>
           <div class="grid-row">
             <div class="grid-row__col grid-row__col--12">
-              <ngb-accordion class="secondary-options">
+              <ngb-accordion 
+                class="secondary-options"
+                (pannelChange)="beforeChange($event)"
+                >
                 <ngb-panel
                   class="secondary-options__item"
                   *ngFor="let option of secondaryOptions; index as i"
@@ -64,6 +67,7 @@
                       <div class="option-header-text">
                         <button
                           class="btn btn-link"
+                          (click)="pannelChange(opened)"
                           ngbPanelToggle
                         >
                           {{option?.text}}
@@ -86,6 +90,7 @@
                         <button
                           type="button"
                           class="btn btn-link"
+                          (click)="pannelChange(opened)"
                           ngbPanelToggle
                         >
                           <i
