Fne 1008 sprint12 mahendra (#451)
* FNE 1008 delete validate button and sidebar

FNE 1008 delete validate button and sidebar

* FNE 1008 delete validate button and sidebar

FNE 1008 delete validate button and sidebar

* FNE-1008 delete validate button

FNE-1008 delete validate button

* FNE-1008 change delete validate button

FNE-1008 change delete validate button

* FNE-1008 change delete validate button

* FNE-1008 changes remove side bar

FNE-1008 changes remove side bar

--- a/front-end/src/app/forms/form-99/f99/f99.component.html
+++ b/front-end/src/app/forms/form-99/f99/f99.component.html
@@ -1,12 +1,12 @@
 <div class="forms__wizard">
-  <div
+  <!--<div
     class="form__alerts"
     [ngClass]="{
       'show-alerts': showValidateBar === true
     }"
   >
     <app-validate></app-validate>
-  </div>
+  </div>-->
   <div
     class="form__container"
     [ngClass]="{
